--- a/index.html
+++ b/index.html
@@ -18,26 +18,38 @@
 			<div class="slides">
 				<section><h1>Contents</h1></section>
 
-				<!-- slide: Mapbox: Population Density Japan -->
+				<!-- slide: Mapbox: ★★★ Population Density Japan ★★★ -->
 				<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
-					<iframe class="stretch" data-src="./mapbox/population_density/index.html" data-preload frameborder="0"
+					<iframe class="stretch" data-src="./mapbox/population_density/pop_dens_japan.html" data-preload frameborder="0"
 						allowfullscreen></iframe>
 				</section>
 
-				<!-- slide: Mapbox: Population History Tokyo -->
+				<!-- slide: Mapbox: ★★★ Population History Tokyo ★★★ -->
 				<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
-					<iframe class="stretch" data-src="./mapbox/population_history/index.html" data-preload frameborder="0"
+					<iframe class="stretch" data-src="./mapbox/population_history/pop_history_tyo.html" data-preload frameborder="0"
 						allowfullscreen></iframe>
 				</section>
 
-				<!-- Vertical slide: Mapbox: Population History Tokyo -->
+				<!-- Vertical slide: Mapbox: ★★★ Global Cities Population Density ★★★ -->
 				<section>
 					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
-						<iframe class="stretch" data-src="./mapbox/global_cities/london.html" data-preload frameborder="0"
+						<iframe class="stretch" data-src="./mapbox/global_cities/pop_dens_lon.html" data-preload frameborder="0"
 							allowfullscreen></iframe>
 					</section>
 					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
-						<iframe class="stretch" data-src="./mapbox/global_cities/newyork.html" data-preload frameborder="0"
+						<iframe class="stretch" data-src="./mapbox/global_cities/pop_dens_nyc.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
+				</section>
+
+				<!-- Vertical slide: Mapbox: ★★★ Green ★★★ -->
+				<section>
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/green/green_lon.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/green/green_nyc.html" data-preload frameborder="0"
 							allowfullscreen></iframe>
 					</section>
 				</section>
