flyto to museums

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 					</section>
 				</section>
 
+				<!-- slide: Mapbox: ★★★ Museums ★★★ -->
+				<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+					<iframe class="stretch" data-src="./mapbox/museums/museums.html" data-preload frameborder="0"
+						allowfullscreen></iframe>
+				</section>
+
 			</div>
 		</div>
 
