--- a/index.html
+++ b/index.html
@@ -54,10 +54,19 @@
 					</section>
 				</section>
 
-				<!-- slide: Mapbox: ★★★ Museums ★★★ -->
-				<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
-					<iframe class="stretch" data-src="./mapbox/museums/museums.html" data-preload frameborder="0"
-						allowfullscreen></iframe>
+				<!-- Vertical slide: Mapbox: ★★★ Green ★★★ -->
+				<section>
+					<!-- slide: Mapbox: ★★★ Museums ★★★ -->
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/museums/museums.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
+
+					<!-- slide: Mapbox: ★★★ Theaters ★★★ -->
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/theaters/theaters.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
 				</section>
 
 			</div>
