--- a/mapbox/museums/museums.html
+++ b/mapbox/museums/museums.html
@@ -18,11 +18,12 @@ body { margin: 0; padding: 0; }
     top: 0px;
     left: 0px;
     width: auto;
-    padding: 50px;
+    padding: 20px;
   }
   
 .indicator-title{
     color: white;
+    font-size: 50px;
 }
 
   /* ===== fly to menu =====*/
