nyc and lon data updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section><h1>Contents</h1></section>
+				<section><h3>Tokyo from multiple perspectives</h1></section>
 
 				<!-- slide: Mapbox: ★★★ Population Density Japan ★★★ -->
 				<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
@@ -54,7 +54,7 @@
 					</section>
 				</section>
 
-				<!-- Vertical slide: Mapbox: ★★★ Green ★★★ -->
+				<!-- Vertical slide: Mapbox: ★★★ GPICI Indicators ★★★ -->
 				<section>
 					<!-- slide: Mapbox: ★★★ Museums ★★★ -->
 					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
