--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 						<iframe class="stretch" data-src="./mapbox/theaters/theaters.html" data-preload frameborder="0"
 							allowfullscreen></iframe>
 					</section>
+
+					<!-- slide: Mapbox: ★★★ Universities ★★★ -->
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/universities/universities.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
+
+					<!-- slide: Mapbox: ★★★ Stations ★★★ -->
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/stations/stations.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
 				</section>
 
 			</div>
