chart.js for foreigners added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
 						<iframe class="stretch" data-src="./mapbox/stations/stations.html" data-preload frameborder="0"
 							allowfullscreen></iframe>
 					</section>
+
+					<!-- slide: Chart.js: ★★★ Foreigners ★★★ -->
+					<section data-fullscreen="true" data-background-color="rgb(255, 255, 255)">
+						<iframe class="stretch" data-src="./chartjs/foreigners/foreigners.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
+
 				</section>
 
 			</div>
