--- a/chartjs/foreigners/foreigners.html
+++ b/chartjs/foreigners/foreigners.html
@@ -36,7 +36,7 @@
                 label: 'Foreign Residents / Residents',
                 backgroundColor: 'rgba(255, 0, 0, 0.5)',
                 borderColor: 'rgba(255, 0, 0, 0.5)',
-                data: [430444, 2008000/9002488, 1292129/8467513],
+                data: [430444/9660461, 2008000/9002488, 1292129/8467513],
             }]
         };
         
