tokyo's pop density added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 						<iframe class="stretch" data-src="./mapbox/global_cities/pop_dens_nyc.html" data-preload frameborder="0"
 							allowfullscreen></iframe>
 					</section>
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)">
+						<iframe class="stretch" data-src="./mapbox/global_cities/pop_dens_tyo.html" data-preload frameborder="0"
+							allowfullscreen></iframe>
+					</section>
 				</section>
 
 				<!-- Vertical slide: Mapbox: ★★★ Green ★★★ -->
